# parrots

./: PyAudio-0.2.11-cp37-cp37m-win_amd64.whl  README.md  README_EN.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ubuntu.yml
examples/: demo_asr.py  demo_recognition.py  demo_speak_continue.py  demo_synthesize_continue.py  demo_tts.py  tts_demo1.py  tts_gradio_demo.py
parrots/: __init__.py  add_speech_word.py  asr.py  chinese_utils.py  cli.py  cnhubert.py  config.py  custom_syllables.py  english_utils.py  japanese_utils.py  mel_processing.py  num_util.py  patched_mha_with_cache.py  pinyin2hanzi.py  speech_recognition.py  symbols.py  synthesizer_model.py  synthesizer_utils.py  t2s_model.py  t2s_module.py  t2s_utils.py  text2speech.py  text_utils.py  tts.py  utils.py  wav_util.py
parrots/data/: mapping.json
parrots/utils/: file_reader.py  io_util.py  math_util.py  wav_util.py
tests/: a.py  speech_reco_test.py  test_tts.py  tts_speak_test.py  tts_synthesize_test.py  tts_test.py
